Estudos/Terminal para estudo.txt
Microsoft Windows [versão 10.0.19045.4291]
(c) Microsoft Corporation. Todos os direitos reservados.

C:\Users\Wesley>python
Python 3.12.3 (tags/v3.12.3:f6650f9, Apr  9 2024, 14:05:25) [MSC v.1938 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> counter = 0
>>> while counter <=100
  File "<stdin>", line 1
    while counter <=100
                       ^
SyntaxError: expected ':'
>>>     print(counter)
  File "<stdin>", line 1
    print(counter)
IndentationError: unexpected indent
>>>     counter += 99
  File "<stdin>", line 1
    counter += 99
IndentationError: unexpected indent
>>>
>>> counter = 0
>>> while counter <=100:
...     print(counter)
...     counter += 99
...
0
99
>>> J=0
>>> whhile J <250:
  File "<stdin>", line 1
    whhile J <250:
           ^
SyntaxError: invalid syntax
>>>     J+=1
  File "<stdin>", line 1
    J+=1
IndentationError: unexpected indent
>>>     print(J)
  File "<stdin>", line 1
    print(J)
IndentationError: unexpected indent
>>>
>>> J=0
>>> while J <250:
...     J+=1
...     print(J)
...
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
>>> J=0
>>> while J <=250:
...     J+=1
...     print(J)
...
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
>>> counter=0
>>> while x%13!=0:
...     counter +=1
...     print(counter)
... else:
...     counter +=2
...     print(counter)
...
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'x' is not defined
>>> counter=0
>>> while counter%13!=0:
...     counter +=1
...     print(counter)
... else:
...     counter +=2
...     print(counter)
...
2
>>>
>>>
>>> counter=0
>>> while counter%13!=0:
...     counter +=1
...     print(counter)
...
>>>
>>> counter=1
>>>
>>> while counter % 13 != 0:
...     counter +=1
...     print(counter)
... else:
...     counter +=2
...     print(counter)
...
2
3
4
5
6
7
8
9
10
11
12
13
15
>>>
>>>
>>> for x in range(1,11):
...     for y in range(11,22,2):
...         print(f'{x}*{y}={x*y}')
...
1*11=11
1*13=13
1*15=15
1*17=17
1*19=19
1*21=21
2*11=22
2*13=26
2*15=30
2*17=34
2*19=38
2*21=42
3*11=33
3*13=39
3*15=45
3*17=51
3*19=57
3*21=63
4*11=44
4*13=52
4*15=60
4*17=68
4*19=76
4*21=84
5*11=55
5*13=65
5*15=75
5*17=85
5*19=95